<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RegisterActivity"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="vertical">

        <!--        <ImageView-->
        <!--            android:layout_width="122dp"-->
        <!--            android:layout_height="256dp"-->
        <!--            android:layout_gravity="center"-->

        <!--            android:contentDescription="@string/app_name" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/leaguespartanbold"
            android:text="@string/schoolmisc"
            android:textAlignment="center"
            android:textColor="@color/colorDarkOneGreen"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/login_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/spartanblack"
            android:gravity="center_vertical"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorDarkOneGreen"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDarkOneGreen" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/spartanblack"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@color/colorDarkGreen"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorDarkOneGreen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="5dp">

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/spartanblack"
                android:text="@string/show"
                android:textColor="@color/colorDarkGreen"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bordered_button"
            android:fontFamily="@font/spartanblack"
            android:padding="3dp"
            android:text="@string/register_now"
            android:textColor="@color/colorDarkGreen"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>